# OxLM

./: .gitignore  README.md
cg/: Makefile  cdec_ff_cnlm.cc  cg.cc  cnlm.cc  cnlm.h  config.h  jointPreformatter.py  label.cc  labelProbs  perplexity.cc  printconfig.cc  train_cnlm.cc
cmake/: FindCdec.cmake  FindEigen3.cmake  GetGitRevisionDescription.cmake.in  GitRevision.cmake
corpus/: corpus.h
cpyp/: boost_serializers.h  crp.h  mf_crp.h  msparse_vector.h
docs/: Style
hpyplm/: Makefile  cdec_ff_hpyplm.cc  chpyplm_generate.cc  dhpyplm.cc  dhpyplm.h  dhpyplm_query.cc  dhpyplm_train.cc  hpyplm.cc  hpyplm.h  hpyplm_query.cc  hpyplm_train.cc  lbl_hpyplm.cc  lbl_hpyplm.h  test.txt  train.txt  uvector.h
jcg/: Makefile  additive-cnlm.cc  additive-cnlm.h  gcnlm.cc  gcnlm.h  train_jcg.cc
lbl/: Makefile  cdec_ff_lbl.cc  config.h  log_bilinear_model.cc  log_bilinear_model.h  nlm.cc  nlm.h  train_clbl.cc  train_factored_sgd.cc  train_mlbl.cc  train_sgd.cc  train_z.cc
pyp/: crp.h  crp_table_manager.h  gamma_poisson.h  logval.h  m.h  mf_crp.h  msparse_vector.h  random.h  slice_sampler.h  tied_parameter_resampler.h
pythonport/oxlm/: __init__.py  cnlm.py  config.py  corpus.py  train.py
sample/: length.de.txt  length.en.txt  mini.en.txt
scripts/: cluster_word_vectors.py  convert_brown.py  countcutoff.sh  flatten.py  generate_huffman_tree.py  generate_random_tree.py  jointPreformatter.py  map_unknowns.py  preprocess-corpus.py  print_clusters.py  sample_corpus.py  uniquePreformatter.py  utils.py
scripts/egrefen/: get_best_k_sentences.py  label_test_split.py  qanalysis.py  run_label_experiment.py  tsneprocess.py
scripts/kmh/: _altrunner.sh  _runner.sh  _train_cldc.sh  altlen.sh  altscript.sh  cldc_euro_prep.sh  cldc_merger.py  cldc_prepare_datasets.sh  cldc_preprocessor.py  cldc_processor.py  cldcrun.sh  cldcscript.sh  europarl-split.sh  plain_cldcscript.sh  run.sh  script.sh  x.sh
src/: CMakeLists.txt
src/cg/: CMakeLists.txt  Makefile  additive-cnlm.cc  additive-cnlm.h  cdec_ff_cnlm.cc  cg.cc  cnlm.cc  cnlm.h  config.h  finite_gradient_check.cc  get_theta_l2norms.cc  label.cc  perplexity.cc  print_cldc.cc  printconfig.cc  train_cnlm.cc  train_cnlm.cc.mod  utils.h
src/cg/jcg/: CMakeLists.txt  additive-cnlm.cc  additive-cnlm.h  gcnlm.cc  train_jcg.cc
src/corpus/: alignment.h  corpus.h
src/cpyp/: crp_table_manager.h  gamma_poisson.h  m.h  random.h  slice_sampler.h  tied_parameter_resampler.h
src/experimental/egrefen/: CMakeLists.txt  get_S_vectors.cc  get_theta_l2norms.cc  get_vectors.cc
src/experimental/kmh/: CMakeLists.txt  paraphrase.cc  paraphrase.h  pp-altprob.cc  pp-logprob.cc
src/hpyplm/: cdec_ff_hpyplm.cc  chpyplm.cc  chpyplm.h  hpyplm.cc  hpyplm.h  hpyplm_query.cc  hpyplm_train.cc  lbl_hpyplm.cc  uniform_vocab.h
src/hvlm/: CMakeLists.txt  hvlm.cc  hvlm.h
src/lbl/: .ParallelCorpus.cc.swp  .vocabulary.h.swp  CMakeLists.txt  Makefile  ParallelCorpus.cc  ParallelCorpus.h  archive_export.h  bloom_filter.h  bloom_filter_populator.cc  bloom_filter_populator.h  cdec_conditional_state_converter.cc  cdec_conditional_state_converter.h  cdec_ff_lbl.cc  cdec_ff_lbl.h  cdec_ff_lbl_with_src.cc  cdec_ff_maxent.cc  cdec_ff_source_lbl.cc  cdec_ff_source_lbl.h  cdec_lbl_mapper.cc  cdec_lbl_mapper.h  cdec_rule_converter.cc  cdec_rule_converter.h  cdec_state_converter.cc  cdec_state_converter.h  cdec_state_converter_base.cc  cdec_state_converter_base.h  circular_feature_batch.cc  circular_feature_batch.h  class_context_extractor.cc  class_context_extractor.h  class_context_hasher.cc  class_context_hasher.h  class_context_keyer.cc  class_context_keyer.h  class_distribution.cc  class_distribution.h  class_hash_space_decider.cc  class_hash_space_decider.h  class_tree.cc  class_tree.h  (+181 more)
src/lbl/tests/: CMakeLists.txt  bloom_filter_populator_test.cc  bloom_filter_test.cc  cdec_conditional_state_converter_test.cc  cdec_lbl_mapper_test.cc  cdec_rule_converter_test.cc  cdec_state_converter_test.cc  circular_feature_batch_test.cc  class_context_extractor_test.cc  class_context_hasher_test.cc  class_context_keyer_test.cc  class_distribution_test.cc  class_hash_space_decider_test.cc  class_tree_test.cc  collision_counter_test.cc  collision_global_feature_store_test.cc  collision_minibatch_feature_store_test.cc  context_cache_test.cc  context_extractor_test.cc  context_processor_test.cc  continuous_feature_batch_test.cc  corpus_test.cc  factored_metadata_test.cc  factored_tree_weights_test.cc  factored_tree_weights_test.h  factored_weights_test.cc  factored_weights_test.h  feature_approximate_filter_test.cc  feature_context_extractor_test.cc  feature_context_generator_test.cc  feature_context_hasher_test.cc  feature_context_keyer_test.cc  feature_context_mapper_test.cc  feature_context_test.cc  feature_exact_filter_test.cc  feature_filter_test.cc  feature_generator_test.cc  feature_index_test.cc  feature_indexes_pair_test.cc  feature_matcher_test.cc  (+46 more)
src/pyp/: crp.h  m.h  msparse_vector.h  random.h  tied_parameter_resampler.h
src/utils/: CMakeLists.txt  conditional_omp.h  constants.h  git_revision.cc.in  git_revision.h  serialization_helpers.h  testing.h  utils.h
src/utils/tests/: CMakeLists.txt  serialization_helpers_test.cc
